Profiler uploading working for specific users now
Docs also updated to reflect this API change
